# td-photohub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-workflow.yml
big_picture/: __init__.py  celery_worker.py  images.py  search.py  utils.py
big_picture/models/: image.py
big_picture/static/: style.css
big_picture/static/upload/: .gitignore
big_picture/templates/: base.html
big_picture/templates/images/: add.html  bulk.html  details.html  gallery.html  tasks.html
big_picture/templates/search/: results.html  simple.html
tests/: conftest.py  test_big_picture.py  test_images.py  test_search.py
